--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "-testfromnanosemantics",
+  "name": "stubborn-battle-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
