--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "config": "^3.2.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.27",
+    "mongoose": "^5.9.28",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
